scss/styles.scss
$orange:#bb5637;


*
{
box-sizing:border-box;
-moz-box-sizing:border-box;
}

body
{
margin:0px;
font-size:16px;
font-family:'Arvo', helvetica, arial, sans-serif;
}

.site_header
	{
	width:100%;
	border:0px solid red;
	background-image:url('../siteart/stitch2x.png'), url('../siteart/background.png');
	background-size:15px auto, 320px;
	background-repeat:repeat-x, repeat;
	background-position: 0 95%;
	height:auto;
	padding:10px 0 30px 0;
	box-shadow: 0px 3px 2px rgba(0,0,0,.1);
	border-bottom:1px solid #fdfbfb;
	}


h1
	{
	font-family:'Lobster';
	font-weight:normal;
	font-size:6em;
	text-align:center;
	line-height:1em;
	color:$orange;
	margin:40px 0 30px 0;
	text-shadow: 2px 2px rgba(0,0,0,.1);
	
	
		@media screen and (max-width:400px) 
		{
		font-size:4.5em;
		}
	
	}
		
	
h2
	{
	font-size:1.3em;
	color:#444;
	text-align:center;
	margin:0 10px 40px;
	font-weight:700;
	
		@media screen and (max-width:400px) 
		{
		font-size:1em;
		}
	

	}
	
	
.clear
	{
	clear:both;
	height:0px;
	padding:0px;
	margin:0px;
	}
	
	
.main
	{
	width:100%;
	height:auto;
	margin:0 auto 80px;
	max-width:800px;
	padding:40px;
	
		@media screen and (max-width:750px) 
			{
			padding:10px;
			}
	
	
	ul
	{
	list-style-type:none;
	margin:0px;
	padding:0px;
	width:100%;
	
			@media screen and (max-width:630px) 
			{
			margin-top:30px;
			}
	
	
		li
		{
		width:33%;
		font-size:.95em;
		color:#666;
		padding:0px;
		margin:0 0 20px 0;
		float:left;
		box-sizing:border-box;
		padding:0 20px 0 0;
		line-height:1.6em;
		
			@media screen and (max-width:630px) 
			{
			width:80%;
			margin-left:85px;
			margin-right:80px;
			}
		
		
			@media screen and (max-width:400px) 
			{
			float:none;
			margin:0px auto;
			width:100%;
			font-size:1em;
			}
		
		
			strong
			{
			color:$orange;	
			font-weight:700;
			}
		}	
		
	}	
	

	
	
	.button
	{
	border-radius:30px;
	width:60px;
	height:60px;
	border-top:2px solid white;
	border-left:2px solid white;
	border-bottom:1px solid #fafafa;
	border-right:1px solid #fafafa;
	box-shadow: 4px 5px 6px 3px rgba(0,0,0,.16), inset -2px -2px 6px 5px rgba(0,0,0,.05);
	position:relative;
	background-color:#fdfbfb;
	margin:20px auto 30px;

	
			@media screen and (max-width:630px) 
			{
			float:left;
			margin:0px 20px 0 -80px;
			}
			
			
			@media screen and (max-width:400px) 
			{
			float:none;
			margin:20px auto 30px;
			}
	
	
		.hole
		{
		width:10px;
		height:10px;
		border-radius:10px;
		box-shadow: -1px -1px 3px 0px rgba(0,0,0,.5), inset 0px 0px 3px 4px rgba(0,0,0,.05);
		background-color:#777;
		position:absolute;
		}
	
		.one
		{
		top:17px;
		left:19px;
		}
		
		.two
		{
		top:32px;
		left:32px;
		}
		
	
	}
	

	}
	
	.cta
	{
	width:250px;
	height:55px;
	border-radius:2px;
	margin:40px auto 40px;
	border:2px solid $orange;
	padding:18px 0 0 0;
	text-align:center;
	font-size:.85em;
	font-weight:700;
	color:$orange;
	background-color:rgba(255,255,255,.6);
	cursor:pointer;
	transition: all 0.2s ease-in-out;

	
		@media screen and (max-width:400px) 
		{
		width:80%;
		margin:0 5% 10px 10%;
		}
	
	
		&:hover
		{
		border:2px solid #666;
		color:#666;
		}
	
	
	}	
	

	.small_button
	{
	width:120px;
	height:35px;
	border:1px solid $orange;
	color:$orange;
	font-size:.8em;
	font-weight:400;
	padding:8px 0 0 0;
	float:left;
	margin-right:20px;
	background-color:white;
	cursor:pointer;
	text-align:center;
	transition: all 0.2s ease-in-out;
	
		&:hover
		{
		border:1px solid #666;
		color:#666;
		}
	
	}
	
.ribbon
	{
	width:100%;
	max-width:418px;
	height:80px;
	background-image: url('../siteart/ribbon.svg');
	border:0px solid red;
	color:white;
	font-size:1.3em;
	text-align:center;
	background-repeat: no-repeat;
	background-size:100% 63px;
	background-position: center top;
	padding:8px 0 0 0;
	margin:40px auto 0;
	
		@media screen and (max-width:375px) 
		{
		font-size:1em;
		padding:15px 0 0 0;
		}
	
	
	}


	.explain
	{
	height:auto;
	width:100%;
	background-color:#d8e6f4;
	clear:both;
	padding:20px 0 0 0;
	margin:0 auto 40px 0;
	background-image:url('../siteart/stitch2x.png'), url('../siteart/stitch2x.png'), url('../siteart/background.png');
	background-size:15px, 15px, 320px;
	background-repeat:repeat-x, repeat-x, repeat;
	background-position: 0 95%, 0 5%;
	
	
	
		.explain_inside
		{
		max-width:800px;
		margin:0px auto;
		padding-bottom:6px;
		
		h2
		{
		margin-bottom:15px
		}
		
	
		}
	
	
	}
	

		.beaker
		{
		width:100%;
		max-width:200px;
		height:auto;
		margin:0 auto 30px;	
		
			@media screen and (max-width:500px) 
			{
			width:180px;
			}
		
		
		img
			{
			width:100%;
			}

		}
		
		.explain_text
		{
		max-width:800px;
		width:100%;
		font-size:1.2em;
		margin:0 auto 60px;
		line-height:1.5em;
		padding:0 10px;
		
			span
			{
			font-weight:700;
			color:$orange;
			}
		
		}

	
	.footer
	{
	width:100%;
	background-color:$orange;
	clear:both;
	padding:20px 0 40px 0;
	
		.copyright
		{
		font-size:.8em;
		color:white;
		text-align:center;
		}
	
	.twit_face
	{
	width:136px;
	height:auto;
	list-style-type:none;
	border:0px solid red;
	padding:0px;
	height:48px;
	margin:20px auto;
	transition: all 0.2s ease-in-out;
		
		li
		{
		width:48px;
		height:48px;
		float:left;
		padding:0px;
		float:left;
		margin:0 10px;

			a
			{
			width:48px;
			height:48px;
			border-radius:24px;
			padding:0px;
			background-color:white;
			background-image:url('../siteart/twit_face.svg');
			background-repeat:no-repeat;
			background-size:110%;
			float:left;
			display:block;			
			}
		
		}
	
		.face
		{
		background-position:14px 14px;
		
			&:hover
			{
			background-position:-19px 14px;			
			}
		
		}
		
		.twit
		{
		background-position:14px -24px;
			&:hover
			{
			background-position:-19px -24px;			
			}
		
		
		}
		
	
	}
	
	
	}
	

	.overlay
	{
	width:100%;
	height:120%;
	background-color:rgba(255,255,255,.9);
	position:absolute;
	z-index:1000;
	display:none;
	
	
		.info_container
		{
		width:100%;
		margin:auto;
		position:absolute;
		top:0px;
		left:0px;
		right:0px;
		bottom:0px;
		height:300px;
		
		
			#loading
			{
			color:$orange;
			text-align:center;
			font-size:1.1em;
			font-weight:700;
			
				.updates
				{
				display:none;
				}
				
				
				#results
				{
				text-align:center;
				
				
					.button_container
					{
					width:auto;
					margin:30px auto;
					max-width:262px;
				

						
						.lasties
						{
						margin:0px;
						}
					
					}
				
				
					#shirt
					{
					width:200px;
					margin:0px auto;
					
					.shirt_image
					{
					width:100%;
					}
					
					
					}
				
				
				}
			
			}

			#spinner
			{
			width:30px;
			height:30px;
			margin:10px auto;
			
				img
				{
				width:100%;
				
				}
			
			}
		
		}

	}	
	
	
	.blur
	{
	-webkit-filter: blur(1px);
	}	
	
	
	/* details container */
	
	.details_container
	{
	width:100%;
	max-width:800px;
	height:400px;
	position:absolute;
	margin:auto;
	top:0px;
	bottom:0px;
	left:0px;
	right:0px;
	display:none;

	
		.details
		{
		width:100%;
		max-width:200px;
		list-style-type: none;
		margin:0 auto;
		padding:0px;
		
		
			li
			{
			font-size:1.4em;
			color:$orange;
			margin:0 0 20px 0;
			text-align:center;
			font-weight:700;
			}
			
						
			span
			{
			display:block;
			color:#444;
			font-weight:400;
			font-size:.85em;
			margin:0 0 8px 0;
			}
		
		
			#predicted, #overdue
			{
			display:none;
			}
		
		}
	
	
	#close_too
	{
	margin:20px auto;
	float:none;
	}
	
	#chart
	{
	width:100%;
	max-width:300px;
	height:200px;
	margin:0px auto;	
	
	.flot-text
	{
	font-size:9px !important;
	}
	
	
	}
	
	
	}
	
	
	

